<?xml version="1.0" encoding="UTF-8" ?>
<!--
  ~ Copyright (c) 2026 Timon Borter <timon.borter@gmx.ch>
  ~ Licensed under the Polyform Small Business License 1.0.0
  ~ See LICENSE file for full details.
  -->
<project
  xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
>
  <modelVersion>4.0.0</modelVersion>

  <groupId>io.github.bbortt.snow-white</groupId>
  <artifactId>parent</artifactId>
  <version>1.5.1</version>

  <packaging>pom</packaging>

  <scm>
    <url>scm:git:https://github.com/bbortt/snow-white.git</url>
  </scm>

  <modules>
    <module>examples/example-snow-white-openapi-generator</module>
    <module>examples/example-spring-boot</module>
    <module>microservices</module>
    <module>toolkit</module>
    <module>internal</module>
    <module>helm</module>
  </modules>

  <properties>
    <!-- Global -->
    <java.version>25</java.version>
    <maven.compiler.release>${java.version}</maven.compiler.release>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

    <!-- SonarQube properties -->
    <sonar.projectName>Snow White</sonar.projectName>
    <sonar.host.url>http://localhost:9000</sonar.host.url>

    <sonar.sources>src/main</sonar.sources>
    <sonar.tests>src/test</sonar.tests>

    <sonar.inclusions>src/main/**/*.java</sonar.inclusions>
    <sonar.exclusions>src/main/resources/**</sonar.exclusions>

    <sonar.test.inclusions>src/test/**/*.java</sonar.test.inclusions>

    <sonar.coverage.exclusions>
      example-application/**,
      **/Main.java
    </sonar.coverage.exclusions>

    <!-- JaCoCo properties -->
    <jacoco.version>0.8.15</jacoco.version>
    <sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
    <sonar.coverage.jacoco.xmlReportPaths>
      ${maven.multiModuleProjectDirectory}/target/jacoco-aggregate/jacoco.xml
    </sonar.coverage.jacoco.xmlReportPaths>
    <sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
    <sonar.junit.reportPaths>
      target/surefire-reports,
      target/failsafe-reports
    </sonar.junit.reportPaths>

    <!-- Dependency Management -->
    <jackson.version>3.2.1</jackson.version>
    <jackson-v2.version>2.22</jackson-v2.version>
    <junit.version>6.1.2</junit.version>
    <license-maven-plugin.version>2.7.1</license-maven-plugin.version>
    <maven-failsafe-plugin.version>3.5.6</maven-failsafe-plugin.version>
    <maven-surefire-plugin.version>3.5.6</maven-surefire-plugin.version>
    <mockito.version>5.23.0</mockito.version>
    <org.projectlombok.version>1.18.46</org.projectlombok.version>
    <sonar-maven-plugin.version>5.7.0.6970</sonar-maven-plugin.version>
    <spring-boot.version>4.1.0</spring-boot.version>
    <spring-retry.version>2.0.13</spring-retry.version>

    <!-- Node.js & NPM -->
    <frontend-maven-plugin.version>2.0.1</frontend-maven-plugin.version>
    <node.downloadRoot>https://nodejs.org/dist/</node.downloadRoot>
    <node.version>v24.15.0</node.version>
  </properties>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.junit</groupId>
        <artifactId>junit-bom</artifactId>
        <version>${junit.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>

      <dependency>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-dependencies</artifactId>
        <version>${spring-boot.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>

      <dependency>
        <groupId>io.opentelemetry.semconv</groupId>
        <artifactId>opentelemetry-semconv</artifactId>
        <version>1.43.0</version>
      </dependency>

      <dependency>
        <groupId>io.github.bbortt.snow-white</groupId>
        <artifactId>archunit-rules</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>io.github.bbortt.snow-white</groupId>
        <artifactId>commons</artifactId>
        <version>${project.version}</version>
      </dependency>

      <dependency>
        <groupId>org.mockito</groupId>
        <artifactId>mockito-core</artifactId>
        <version>${mockito.version}</version>
        <scope>test</scope>
      </dependency>

      <dependency>
        <groupId>org.projectlombok</groupId>
        <artifactId>lombok</artifactId>
        <version>${org.projectlombok.version}</version>
        <scope>provided</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <dependencies>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>com.github.eirslett</groupId>
          <artifactId>frontend-maven-plugin</artifactId>
          <version>${frontend-maven-plugin.version}</version>
          <configuration>
            <installDirectory>target</installDirectory>
            <nodeVersion>${node.version}</nodeVersion>
          </configuration>
        </plugin>

        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.15.0</version>
        </plugin>

        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-dependency-plugin</artifactId>
          <version>3.11.0</version>
        </plugin>

        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-failsafe-plugin</artifactId>
          <version>${maven-failsafe-plugin.version}</version>
        </plugin>

        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-resources-plugin</artifactId>
          <version>3.5.0</version>
        </plugin>

        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>${maven-surefire-plugin.version}</version>
        </plugin>
      </plugins>
    </pluginManagement>

    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <configuration>
          <excludes>
            <exclude>**/*AppTest.java</exclude>
            <exclude>**/*IT.java</exclude>
            <exclude>**/*IT$*.java</exclude>
          </excludes>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-failsafe-plugin</artifactId>
        <executions>
          <execution>
            <configuration>
              <includes>
                <include>**/*IT.java</include>
              </includes>
            </configuration>
            <goals>
              <goal>integration-test</goal>
              <goal>verify</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>license-maven-plugin</artifactId>
        <version>${license-maven-plugin.version}</version>
        <configuration>
          <outputDirectory>${project.basedir}</outputDirectory>
          <thirdPartyFilename>MAVEN_LICENSES.txt</thirdPartyFilename>
          <fileTemplate>
            /org/codehaus/mojo/license/third-party-file-groupByLicense.ftl
          </fileTemplate>
          <excludedGroups>io.github.bbortt</excludedGroups>
          <excludedScopes>test,provided</excludedScopes>
          <sortArtifactByName>true</sortArtifactByName>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.jacoco</groupId>
        <artifactId>jacoco-maven-plugin</artifactId>
        <version>${jacoco.version}</version>
        <executions>
          <execution>
            <id>jacoco-initialize</id>
            <goals>
              <goal>prepare-agent</goal>
            </goals>
            <configuration>
              <destFile>
                ${maven.multiModuleProjectDirectory}/target/jacoco.exec
              </destFile>
            </configuration>
          </execution>
          <execution>
            <id>jacoco-report</id>
            <phase>test</phase>
            <goals>
              <goal>report</goal>
            </goals>
            <configuration>
              <dataFile>
                ${maven.multiModuleProjectDirectory}/target/jacoco.exec
              </dataFile>
              <outputDirectory>
                ${project.reporting.outputDirectory}/jacoco
              </outputDirectory>
            </configuration>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.sonarsource.scanner.maven</groupId>
        <artifactId>sonar-maven-plugin</artifactId>
        <version>${sonar-maven-plugin.version}</version>
      </plugin>
    </plugins>
  </build>

  <profiles>
    <profile>
      <id>node</id>

      <build>
        <plugins>
          <plugin>
            <groupId>com.github.eirslett</groupId>
            <artifactId>frontend-maven-plugin</artifactId>

            <executions>
              <execution>
                <id>install-node-and-npm</id>
                <goals>
                  <goal>install-node-and-npm</goal>
                </goals>
                <configuration>
                  <nodeVersion>${node.version}</nodeVersion>
                  <nodeDownloadRoot>${node.downloadRoot}</nodeDownloadRoot>
                </configuration>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>

    <profile>
      <id>sonar</id>

      <build>
        <plugins>
          <plugin>
            <groupId>org.jacoco</groupId>
            <artifactId>jacoco-maven-plugin</artifactId>
            <version>${jacoco.version}</version>
            <executions>
              <execution>
                <id>report-aggregate</id>
                <phase>verify</phase>
                <goals>
                  <goal>report-aggregate</goal>
                </goals>
                <configuration>
                  <dataFileIncludes>
                    <dataFileInclude>**/jacoco.exec</dataFileInclude>
                  </dataFileIncludes>
                  <outputDirectory>
                    ${maven.multiModuleProjectDirectory}/target/jacoco-aggregate
                  </outputDirectory>
                </configuration>
              </execution>
            </executions>
          </plugin>

          <plugin>
            <groupId>org.sonarsource.scanner.maven</groupId>
            <artifactId>sonar-maven-plugin</artifactId>
            <version>${sonar-maven-plugin.version}</version>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>

  <distributionManagement>
    <repository>
      <id>github</id>
      <name>GitHub Packages</name>
      <url>https://maven.pkg.github.com/bbortt/snow-white</url>
    </repository>
  </distributionManagement>
</project>
